--- a/src/4-pie-chart.ipynb
+++ b/src/4-pie-chart.ipynb
@@ -14,7 +14,69 @@
    "outputs": [],
    "source": [
     "# TASK: Create a pie chart with the following data: labels = ['Python', 'Java', 'C++', 'JavaScript'] and sizes = [40, 25, 20, 15].\n",
-    "# Display the percentages on the chart using autopct."
+    "# Display the percentages on the chart using autopct.\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Generate x values from 0 to 10\n",
+    "x = np.linspace(0, 10, 100)\n",
+    "y = x**2  # Square of x\n",
+    "\n",
+    "# Create the plot\n",
+    "plt.plot(x, y, label='y = x^2', color='b', linestyle='-')\n",
+    "\n",
+    "# Add title and labels\n",
+    "plt.title('Line Plot of y = x^2')\n",
+    "plt.xlabel('X Values')\n",
+    "plt.ylabel('Y Values')\n",
+    "\n",
+    "# Add grid\n",
+    "plt.grid(True, linestyle='--', alpha=0.7)\n",
+    "\n",
+    "# Add legend\n",
+    "plt.legend()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n",
+    "\n",
+    "# Create a bar plot with given data\n",
+    "categories = ['A', 'B', 'C', 'D']\n",
+    "values = [5, 7, 3, 9]\n",
+    "colors = ['red', 'blue', 'green', 'purple']\n",
+    "\n",
+    "plt.bar(categories, values, color=colors)\n",
+    "plt.title('Bar Plot of Categories')\n",
+    "plt.xlabel('Categories')\n",
+    "plt.ylabel('Values')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n",
+    "\n",
+    "# Create a scatter plot with annotations\n",
+    "x_scatter = [1, 2, 3, 4, 5]\n",
+    "y_scatter = [2, 4, 6, 8, 10]\n",
+    "\n",
+    "plt.scatter(x_scatter, y_scatter, color='red')\n",
+    "plt.title('Scatter Plot with Annotations')\n",
+    "plt.xlabel('X Values')\n",
+    "plt.ylabel('Y Values')\n",
+    "\n",
+    "# Annotate each point\n",
+    "for i, txt in enumerate(zip(x_scatter, y_scatter)):\n",
+    "    plt.annotate(f'({txt[0]}, {txt[1]})', (x_scatter[i], y_scatter[i]), textcoords=\"offset points\", xytext=(5,5), ha='center')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n",
+    "\n",
+    "# Create a pie chart with given data\n",
+    "labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
+    "sizes = [40, 25, 20, 15]\n",
+    "\n",
+    "plt.pie(sizes, labels=labels, autopct='%1.1f%%', startangle=140, colors=['blue', 'green', 'red', 'orange'])\n",
+    "plt.title('Programming Language Usage')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n"
    ]
   }
  ],
